tests/paczka2/big_fuzzy/30056502.err
Error in line 11: vAayO A106 69,7
Error in line 16: 6x0v71gbIKu A483 33,4
Error in line 15: tSPRwrb7g S577 1,8
Error in line 20: 6x0v71gbIKu A106 85,8
Error in line 34: A483 A106 28,9
Error in line 36: A483 S207 8,7
Error in line 42: tSPRwrb7g S577 14,|
Error in line 40: tSPRwrb7g A483 37,6
Error in line 55: A483 S577 91,6
Error in line 57: 6x0v71gbIKu S207 78,1
Error in line 67: tSPRwrb7g S577 5,1
Error in line 61: 3sWE S207 29,1
Error in line 76: vAayO S207 79,5
Error in line 72: A483 S577 37,2
Error in line 94: A483 S577 15,69
Error in line 92: ea0Nz8YZEz A483 2500,5
Error in line 98: tSPRwrb7g A483 39,4
Error in line 101: tSPRwrb7g S577 54,3
Error in line 119: ea0Nz8YZEz S577 97,2
Error in line 120: ea0Nz8YZEz S207 42,7
Error in line 121: ea0Nz8YZEz A483 89,9
Error in line 123: 3sWE S577 22,3
Error in line 102: 6x0v71gbIKu S577 43,2
Error in line 124: 3sWE A106 8,0
Error in line 126: 6x0v71gbIKu S207 5,1
Error in line 127: 3sWE S577 60,1
Error in line 132: vAayO S207 2,6
Error in line 135: yr8SW A106 29,3
Error in line 96: A483 S577 53,9
Error in line 133: vAayO A106 83,9
Error in line 130: 6x0v71gbIKu A483 65,2
Error in line 163: vAayO S577 26,7
Error in line 164: ea0Nz8YZEz S207 50,9
Error in line 181: 3sWE A106 68,8
Error in line 186: vAayO S207 50,1
Error in line 194: vAayO A106 39,4
Error in line 195: 3sWE A483 1,1
Error in line 190: 6x0v71gbIKu A106 87,6
Error in line 167: A483 A483 230,7
Error in line 200: 6x0v71gbIKu S207 70,5
Error in line 210: 6x0v71gbIKu S207 2,5
Error in line 213: 3sWE A106 61,6
Error in line 216: yr8SW S577 62,2
Error in line 226: A483 A106 50,4
Error in line 233: 3sWE S577 8,6
Error in line 240: yr8SW S207 33,2
